Add Arcjet integration and update environment configuration
- Introduced Arcjet for bot detection and rate limiting in the application.
- Updated .env file to include ARCJET_API_KEY and ARCJET_ENV variables.
- Added new dependencies for Arcjet in package.json and pnpm-lock.yaml.
- Simplified authentication routes by removing rate limiting middleware.

--- a/.env
+++ b/.env
@@ -5,3 +5,6 @@ LOG_LEVEL=info
 
 # DATABASE CONFIGURATION
 DATABASE_URL=postgresql://neondb_owner:npg_YNDm4e0OFfGP@ep-lively-waterfall-ahtkdavq-pooler.c-3.us-east-1.aws.neon.tech/neondb?sslmode=require&channel_binding=require
+JWT_SECRET=your_jwt_secret_key
+ARCJET_API_KEY=ajkey_01kd5qgkm1f88byqhmrmsrj3nj
+ARCJET_ENV=development
