feat: add sign-in and sign-up pages with basic styling
- Created signin.html for user authentication with email and password fields.
- Created signup.html for user registration with name, email, password, and role selection.
- Added responsive design and user-friendly styles for both pages.

chore: update dev.sh script for local development setup

- Added environment variable loading from .env.development.
- Implemented Docker container checks and health verification for the database.
- Included migration generation and application steps using Drizzle.

feat: implement security middleware for rate limiting

- Added security middleware to enforce rate limits based on user roles (admin, user, guest).
- Integrated logging for blocked requests and rate limit exceedances.
- Enhanced error handling for middleware operations.

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "node --watch src/index.js",
+    "start": "node src/index.js",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
     "prettier:check": "prettier --check .",
@@ -25,7 +26,8 @@
     "db:generate": "drizzle-kit generate",
     "db:migrate": "drizzle-kit migrate",
     "db:studio": "drizzle-kit studio",
-    "db:rollback": "drizzle-kit rollback"
+    "db:rollback": "drizzle-kit rollback",
+    "dev:docker": "./scripts/dev.sh"
   },
   "keywords": [],
   "author": "",
@@ -44,6 +46,7 @@
     "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.3",
     "morgan": "^1.10.1",
+    "pg": "^8.16.3",
     "winston": "^3.19.0",
     "zod": "^4.2.1"
   },
@@ -53,6 +56,7 @@
     "eslint": "^9.39.2",
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-prettier": "^5.5.4",
+    "postgres": "^3.4.7",
     "prettier": "^3.7.4"
   }
 }
