--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -3,9 +3,9 @@ services:
     image: postgres:15
     container_name: neon_local_dev
     environment:
-      POSTGRES_USER: neondb_owner
-      POSTGRES_PASSWORD: npg_YNDm4e0OFfGP
-      POSTGRES_DB: neondb_owner
+      POSTGRES_USER: ${POSTGRES_USER:-neondb_owner}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+      POSTGRES_DB: ${POSTGRES_DB:-neondb_owner}
     ports:
       - "55432:5432"
     volumes:
